--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-uglifyjs": "^0.6.2"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.6",
     "jquery": "^3.2.1",
     "tether": "^1.4.0"
