--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.6",
     "jquery": "^3.2.1",
-    "tether": "^1.4.0"
+    "tether": "^1.4.0",
+    "wowjs": "^1.1.3"
   }
 }
